fix: fixing alignment issues in the individual blogposts page

--- a/components/styles/author-card.css
+++ b/components/styles/author-card.css
@@ -10,8 +10,35 @@
       0px 0px 16px 0px rgba(0, 0, 0, 0.1),
       0px 2px 2px 0px rgba(0, 0, 0, 0.05),
       0px 2px 6px 0px rgba(0, 0, 0, 0.05);
+    margin-top: 3rem;
+  }
+
+  h3.author-name {
+    font-size: 14px;
+    line-height: 21px;
+    font-family: 'Inter', sans-serif;
+    font-weight: 700;
+    color: #000000;
+    margin: 0%;
+  }
+
+  h4.author-title {
+    font-size: 11px;
+    line-height: 13.75px;
+    font-family: 'Inter', sans-serif;
+    font-weight: 400;
+    color: #000000;
+    margin: 0%;
   }
   
+  p.author-bio {
+    font-size: 14px;
+    line-height: 17.5px;
+    font-family: 'Inter', sans-serif;
+    font-weight: 300;
+    color: #000000;
+    margin: 0%;
+  }
   .author-card__header {
     display: flex;
     align-items: center;
